Auto-remove --add-exports options if current JVM doesn't support it
Fixes #12